unpackaged/main/default/objects/Investor_Distribution__c/Investor_Distribution__c.object-meta.xml
<CustomObject>
    <description>To capture the amount that is distributed to limited partners for each commitment</description>
    <label>Investor Distribution</label>
    <nameField>
        <displayFormat>ID-{0000}</displayFormat>
        <label>ID No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Investor Distributions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>