unpackaged/main/default/objects/Investor_Distribution__c/fields/Capital_Recallable__c.field-meta.xml
<CustomField>
    <fullName>Capital_Recallable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Capital Recallable</label>
    <type>Checkbox</type>
</CustomField>