unpackaged/main/default/objects/Investor_Distribution__c/fields/Capital_Return__c.field-meta.xml
<CustomField>
    <fullName>Capital_Return__c</fullName>
    <label>Capital Return</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>