unpackaged/main/default/objects/Investor_Distribution__c/fields/Commitment__c.field-meta.xml
<CustomField>
    <fullName>Commitment__c</fullName>
    <label>Commitment</label>
    <referenceTo>Commitment__c</referenceTo>
    <relationshipLabel>Investor Distributions</relationshipLabel>
    <relationshipName>Investor_Distributions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>