unpackaged/main/default/objects/Investor_Distribution__c/fields/Dividends__c.field-meta.xml
<CustomField>
    <fullName>Dividends__c</fullName>
    <label>Dividends</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>