unpackaged/main/default/objects/Investor_Distribution__c/fields/Fund_Distribution__c.field-meta.xml
<CustomField>
    <fullName>Fund_Distribution__c</fullName>
    <label>Fund Distribution</label>
    <referenceTo>Fund_Distribution__c</referenceTo>
    <relationshipLabel>Investor Distributions</relationshipLabel>
    <relationshipName>Investor_Distributions</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>