unpackaged/main/default/objects/Investor_Distribution__c/fields/Other_Proceeds__c.field-meta.xml
<CustomField>
    <fullName>Other_Proceeds__c</fullName>
    <label>Other Proceeds</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>