unpackaged/main/default/objects/Investor_Distribution__c/fields/Realized_Gain__c.field-meta.xml
<CustomField>
    <fullName>Realized_Gain__c</fullName>
    <label>Realized Gain</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>