unpackaged/main/default/objects/Investor_Distribution__c/fields/Total_Distributions__c.field-meta.xml
<CustomField>
    <fullName>Total_Distributions__c</fullName>
    <formula>( Capital_Return__c + Dividends__c + Realized_Gain__c + Other_Proceeds__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Distributions</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>