unpackaged/main/default/objects/Investor_Distribution__c/validationRules/Check_Capital_Return.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Capital_Return</fullName>
    <active>true</active>
    <errorConditionFormula>if(Capital_Return__c &lt;0,true,false)</errorConditionFormula>
    <errorDisplayField>Capital_Return__c</errorDisplayField>
    <errorMessage>Capital Return cannot be less than zero.</errorMessage>
</ValidationRule>