unpackaged/main/default/objects/Investor_Distribution__c/validationRules/Check_Dividends.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Dividends</fullName>
    <active>true</active>
    <errorConditionFormula>if(Dividends__c  &lt;0,true,false)</errorConditionFormula>
    <errorDisplayField>Dividends__c</errorDisplayField>
    <errorMessage>Dividends cannot be less than zero.</errorMessage>
</ValidationRule>