unpackaged/main/default/objects/Investor_Distribution__c/validationRules/Check_Other_Proceeds.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Other_Proceeds</fullName>
    <active>true</active>
    <errorConditionFormula>if(Other_Proceeds__c   &lt;0,true,false)</errorConditionFormula>
    <errorDisplayField>Other_Proceeds__c</errorDisplayField>
    <errorMessage>Other Proceeds cannot be less than zero.</errorMessage>
</ValidationRule>