unpackaged/main/default/objects/Investor_Distribution__c/validationRules/Check_Realized_Gain.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Realized_Gain</fullName>
    <active>true</active>
    <errorConditionFormula>if(Realized_Gain__c  &lt;0,true,false)</errorConditionFormula>
    <errorDisplayField>Realized_Gain__c</errorDisplayField>
    <errorMessage>Realized Gain cannot be less than zero.</errorMessage>
</ValidationRule>